rgbds-0.6.1/test/asm/symbol-invalid-macro-arg.err
error: symbol-invalid-macro-arg.asm(1):
    Invalid macro argument '\0'
error: Assembly aborted (1 error)!
