rgbds-0.6.1/test/asm/symbol-invalid-macro-arg.asm
x\0 = 10
println x
